fix: the icon is overflowing

--- a/src/components/GalleryItem/galleryItem.css
+++ b/src/components/GalleryItem/galleryItem.css
@@ -1,3 +1,7 @@
 .gallery-item:hover > .hidden-content {
-  transform: scale(1);
+  transform: scale(0.6);
+}
+
+.gallery-item {
+  overflow: hidden;
 }
